compiler/tests/compiler/must_fail/t_20.mil.exp.err
Parsing tests/compiler/must_fail/t_20.mil as MIL

tests/compiler/must_fail/t_20.mil:11:3: 11:4 error: type mismatch (got bool, expected u64)
  x = bar();
  ^^
tests/compiler/must_fail/t_20.mil:10:3: 10:4 error: <-- declared here
  x : reg bool;
  ^^
